syntax="proto3";

package common;

message String {
    string text =1;
}

message Bytes {
    bytes bits =1;
}

message Bool {
    bool answer =1;
}

message StringArray {
    repeated String strings=1;
}

message StringMap {
    map<string, String> string_map=1;
}

message Empty {}

message Identifier {
    String id=1;
}

message Int64 {
    int64 num = 1;
}

message Float64 {
    double num = 1;
}

message Graph {
    repeated Float64 xs = 1;
   repeated  Float64 ys=2;
}


message ScatterPlot {
    Graph graph=1;
    GraphShape shape=2;
    GraphMedia media=3;
    RGBA color =4;
    Int64 Width =5;
    Int64 Hieght =6;
}

message RGBA {
    Int64 r =1;
    Int64 g =2;
    Int64 b =3;
    Int64 a =4;
}

message Error {
    String error_msg =1;
    String info =3;
}

enum GraphShape {
    CIRCLE=0;
}

enum GraphMedia {
    PNG =0;
}

enum HTTPMethod {
    GET =0;
    POST=1;
    PATCH=2;
}

message HTTPRequest {
    HTTPMethod method=1;
    common.String url =2;
    common.StringMap form =3;
    common.Bytes body =4;
}

message Token {
    common.String access_token=1;
    common.String token_type=2;
    common.String refresh_token =3;
    common.String expiry =4;
    common.String id_token=5;
}

